// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mg-menu MutationObserver horizontal with args { label: 'batman menu', direction: 'horizontal' } 1`] = `
<mg-menu aria-label="batman menu" direction="horizontal" role="list">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <mg-menu-item data-style-direction="horizontal" role="listitem" status="visible">
    <mock:shadow-root>
      <mg-popover>
        <mock:shadow-root>
          <slot></slot>
          <slot name="content"></slot>
        </mock:shadow-root>
        <button aria-controls="mg-popover-test_0" aria-expanded="false" class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--horizontal mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible">
          <slot name="image"></slot>
          <div class="mg-c-menu-item__navigation-button-center">
            <div class="mg-c-menu-item__navigation-button-text-content">
              <slot name="label"></slot>
              <slot name="information"></slot>
            </div>
          </div>
          <span class="mg-c-menu-item__navigation-button-chevron">
            <mg-icon icon="chevron-down" size="small"></mg-icon>
          </span>
        </button>
        <mg-popover-content data-arrow-hide data-popper-placement="bottom-start" data-popper-reference-hidden id="mg-popover-test_0" slot="content" style="position: fixed; left: 0; top: 0; margin: 0; right: auto; bottom: auto; transform: translate(0px, 0px);">
          <mock:shadow-root>
            <mg-card class="mg-c-popover-content">
              <div class="mg-c-popover-content__title">
                <slot name="title"></slot>
              </div>
              <slot name="content"></slot>
            </mg-card>
            <slot name="arrow"></slot>
          </mock:shadow-root>
          <div data-popper-arrow slot="arrow" style="position: absolute;"></div>
          <div class="mg-c-menu-item__collapse-container mg-c-menu-item__collapse-container--first-level" slot="content">
            <slot></slot>
          </div>
        </mg-popover-content>
      </mg-popover>
    </mock:shadow-root>
    <span slot="label" title="batman">
      batman
    </span>
    <mg-menu aria-label="batman - submenu" direction="vertical" role="list">
      <mock:shadow-root>
        <slot></slot>
      </mock:shadow-root>
      <mg-menu-item data-style-direction="vertical" role="listitem" status="visible">
        <mock:shadow-root>
          <button aria-expanded="false" class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--vertical mg-c-menu-item__navigation-button--visible">
            <slot name="image"></slot>
            <div class="mg-c-menu-item__navigation-button-center">
              <div class="mg-c-menu-item__navigation-button-text-content">
                <slot name="label"></slot>
                <slot name="information"></slot>
              </div>
            </div>
            <span class="mg-c-menu-item__navigation-button-chevron">
              <mg-icon icon="chevron-down" size="small"></mg-icon>
            </span>
          </button>
          <div class="mg-c-menu-item__collapse-container" hidden="">
            <slot></slot>
          </div>
        </mock:shadow-root>
        <span slot="label" title="batman begins">
          batman begins
        </span>
        <mg-menu aria-label="batman begins - submenu" direction="vertical" role="list">
          <mock:shadow-root>
            <slot></slot>
          </mock:shadow-root>
          <mg-menu-item data-level="2" data-style-direction="vertical" role="listitem" status="visible">
            <mock:shadow-root>
              <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--vertical mg-c-menu-item__navigation-button--visible">
                <slot name="image"></slot>
                <div class="mg-c-menu-item__navigation-button-center">
                  <div class="mg-c-menu-item__navigation-button-text-content">
                    <slot name="label"></slot>
                    <slot name="information"></slot>
                  </div>
                </div>
              </button>
              <div class="mg-c-menu-item__collapse-container" hidden="">
                <slot></slot>
              </div>
            </mock:shadow-root>
            <span slot="label" title="movie">
              movie
            </span>
          </mg-menu-item>
        </mg-menu>
      </mg-menu-item>
      <mg-menu-item data-style-direction="vertical" role="listitem" status="visible">
        <mock:shadow-root>
          <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--vertical mg-c-menu-item__navigation-button--visible">
            <slot name="image"></slot>
            <div class="mg-c-menu-item__navigation-button-center">
              <div class="mg-c-menu-item__navigation-button-text-content">
                <slot name="label"></slot>
                <slot name="information"></slot>
              </div>
            </div>
          </button>
          <div class="mg-c-menu-item__collapse-container" hidden="">
            <slot></slot>
          </div>
        </mock:shadow-root>
        <span slot="label" title="joker: the dark knight">
          joker: the dark knight
        </span>
      </mg-menu-item>
      <mg-menu-item data-style-direction="vertical" role="listitem" status="visible">
        <mock:shadow-root>
          <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--vertical mg-c-menu-item__navigation-button--visible">
            <slot name="image"></slot>
            <div class="mg-c-menu-item__navigation-button-center">
              <div class="mg-c-menu-item__navigation-button-text-content">
                <slot name="label"></slot>
                <slot name="information"></slot>
              </div>
            </div>
          </button>
          <div class="mg-c-menu-item__collapse-container" hidden="">
            <slot></slot>
          </div>
        </mock:shadow-root>
        <span slot="label" title="bane: the dark knight rise">
          bane: the dark knight rise
        </span>
      </mg-menu-item>
    </mg-menu>
  </mg-menu-item>
  <mg-menu-item data-style-direction="horizontal" role="listitem" status="visible">
    <mock:shadow-root>
      <mg-popover>
        <mock:shadow-root>
          <slot></slot>
          <slot name="content"></slot>
        </mock:shadow-root>
        <button aria-controls="mg-popover-test_5" aria-expanded="false" class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--horizontal mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible">
          <slot name="image"></slot>
          <div class="mg-c-menu-item__navigation-button-center">
            <div class="mg-c-menu-item__navigation-button-text-content">
              <slot name="label"></slot>
              <slot name="information"></slot>
            </div>
          </div>
          <span class="mg-c-menu-item__navigation-button-chevron">
            <mg-icon icon="chevron-down" size="small"></mg-icon>
          </span>
        </button>
        <mg-popover-content data-arrow-hide data-popper-placement="bottom-start" data-popper-reference-hidden id="mg-popover-test_5" slot="content" style="position: fixed; left: 0; top: 0; margin: 0; right: auto; bottom: auto; transform: translate(0px, 0px);">
          <mock:shadow-root>
            <mg-card class="mg-c-popover-content">
              <div class="mg-c-popover-content__title">
                <slot name="title"></slot>
              </div>
              <slot name="content"></slot>
            </mg-card>
            <slot name="arrow"></slot>
          </mock:shadow-root>
          <div data-popper-arrow slot="arrow" style="position: absolute;"></div>
          <div class="mg-c-menu-item__collapse-container mg-c-menu-item__collapse-container--first-level" slot="content">
            <slot></slot>
          </div>
        </mg-popover-content>
      </mg-popover>
    </mock:shadow-root>
    <span slot="label" title="joker">
      joker
    </span>
    <div data-mg-popover-guard="identifier-2-popover">
      <h2>
        This is a joker card
      </h2>
      <p>
        If you don't know the joker, you can watch the movie.
      </p>
    </div>
  </mg-menu-item>
  <mg-menu-item data-style-direction="horizontal" role="listitem" status="visible">
    <mock:shadow-root>
      <a class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--horizontal mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible" href="#bane">
        <slot name="image"></slot>
        <div class="mg-c-menu-item__navigation-button-center">
          <div class="mg-c-menu-item__navigation-button-text-content">
            <slot name="label"></slot>
            <slot name="information"></slot>
          </div>
        </div>
      </a>
      <div class="mg-c-menu-item__collapse-container mg-c-menu-item__collapse-container--first-level" hidden="">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <span slot="label" title="bane">
      bane
    </span>
  </mg-menu-item>
  <mg-item-more></mg-item-more>
</mg-menu>
`;

exports[`mg-menu MutationObserver horizontal with args { label: 'batman menu', direction: 'horizontal' } 2`] = `
<mg-menu aria-label="batman menu" direction="horizontal" role="list">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <mg-menu-item data-style-direction="horizontal" role="listitem" status="visible">
    <mock:shadow-root>
      <mg-popover>
        <mock:shadow-root>
          <slot></slot>
          <slot name="content"></slot>
        </mock:shadow-root>
        <button aria-controls="mg-popover-test_0" aria-expanded="false" class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--horizontal mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible">
          <slot name="image"></slot>
          <div class="mg-c-menu-item__navigation-button-center">
            <div class="mg-c-menu-item__navigation-button-text-content">
              <slot name="label"></slot>
              <slot name="information"></slot>
            </div>
          </div>
          <span class="mg-c-menu-item__navigation-button-chevron">
            <mg-icon icon="chevron-down" size="small"></mg-icon>
          </span>
        </button>
        <mg-popover-content data-arrow-hide data-popper-placement="bottom-start" data-popper-reference-hidden id="mg-popover-test_0" slot="content" style="position: fixed; left: 0; top: 0; margin: 0; right: auto; bottom: auto; transform: translate(0px, 0px);">
          <mock:shadow-root>
            <mg-card class="mg-c-popover-content">
              <div class="mg-c-popover-content__title">
                <slot name="title"></slot>
              </div>
              <slot name="content"></slot>
            </mg-card>
            <slot name="arrow"></slot>
          </mock:shadow-root>
          <div data-popper-arrow slot="arrow" style="position: absolute;"></div>
          <div class="mg-c-menu-item__collapse-container mg-c-menu-item__collapse-container--first-level" slot="content">
            <slot></slot>
          </div>
        </mg-popover-content>
      </mg-popover>
    </mock:shadow-root>
    <span slot="label" title="batman">
      batman
    </span>
    <mg-menu aria-label="batman - submenu" direction="vertical" role="list">
      <mock:shadow-root>
        <slot></slot>
      </mock:shadow-root>
      <mg-menu-item data-style-direction="vertical" role="listitem" status="visible">
        <mock:shadow-root>
          <button aria-expanded="false" class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--vertical mg-c-menu-item__navigation-button--visible">
            <slot name="image"></slot>
            <div class="mg-c-menu-item__navigation-button-center">
              <div class="mg-c-menu-item__navigation-button-text-content">
                <slot name="label"></slot>
                <slot name="information"></slot>
              </div>
            </div>
            <span class="mg-c-menu-item__navigation-button-chevron">
              <mg-icon icon="chevron-down" size="small"></mg-icon>
            </span>
          </button>
          <div class="mg-c-menu-item__collapse-container" hidden="">
            <slot></slot>
          </div>
        </mock:shadow-root>
        <span slot="label" title="batman begins">
          batman begins
        </span>
        <mg-menu aria-label="batman begins - submenu" direction="vertical" role="list">
          <mock:shadow-root>
            <slot></slot>
          </mock:shadow-root>
          <mg-menu-item data-level="2" data-style-direction="vertical" role="listitem" status="visible">
            <mock:shadow-root>
              <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--vertical mg-c-menu-item__navigation-button--visible">
                <slot name="image"></slot>
                <div class="mg-c-menu-item__navigation-button-center">
                  <div class="mg-c-menu-item__navigation-button-text-content">
                    <slot name="label"></slot>
                    <slot name="information"></slot>
                  </div>
                </div>
              </button>
              <div class="mg-c-menu-item__collapse-container" hidden="">
                <slot></slot>
              </div>
            </mock:shadow-root>
            <span slot="label" title="movie">
              movie
            </span>
          </mg-menu-item>
        </mg-menu>
      </mg-menu-item>
      <mg-menu-item data-style-direction="vertical" role="listitem" status="visible">
        <mock:shadow-root>
          <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--vertical mg-c-menu-item__navigation-button--visible">
            <slot name="image"></slot>
            <div class="mg-c-menu-item__navigation-button-center">
              <div class="mg-c-menu-item__navigation-button-text-content">
                <slot name="label"></slot>
                <slot name="information"></slot>
              </div>
            </div>
          </button>
          <div class="mg-c-menu-item__collapse-container" hidden="">
            <slot></slot>
          </div>
        </mock:shadow-root>
        <span slot="label" title="joker: the dark knight">
          joker: the dark knight
        </span>
      </mg-menu-item>
      <mg-menu-item data-style-direction="vertical" role="listitem" status="visible">
        <mock:shadow-root>
          <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--vertical mg-c-menu-item__navigation-button--visible">
            <slot name="image"></slot>
            <div class="mg-c-menu-item__navigation-button-center">
              <div class="mg-c-menu-item__navigation-button-text-content">
                <slot name="label"></slot>
                <slot name="information"></slot>
              </div>
            </div>
          </button>
          <div class="mg-c-menu-item__collapse-container" hidden="">
            <slot></slot>
          </div>
        </mock:shadow-root>
        <span slot="label" title="bane: the dark knight rise">
          bane: the dark knight rise
        </span>
      </mg-menu-item>
    </mg-menu>
  </mg-menu-item>
  <mg-menu-item data-style-direction="horizontal" role="listitem" status="visible">
    <mock:shadow-root>
      <mg-popover>
        <mock:shadow-root>
          <slot></slot>
          <slot name="content"></slot>
        </mock:shadow-root>
        <button aria-controls="mg-popover-test_5" aria-expanded="false" class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--horizontal mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible">
          <slot name="image"></slot>
          <div class="mg-c-menu-item__navigation-button-center">
            <div class="mg-c-menu-item__navigation-button-text-content">
              <slot name="label"></slot>
              <slot name="information"></slot>
            </div>
          </div>
          <span class="mg-c-menu-item__navigation-button-chevron">
            <mg-icon icon="chevron-down" size="small"></mg-icon>
          </span>
        </button>
        <mg-popover-content data-arrow-hide data-popper-placement="bottom-start" data-popper-reference-hidden id="mg-popover-test_5" slot="content" style="position: fixed; left: 0; top: 0; margin: 0; right: auto; bottom: auto; transform: translate(0px, 0px);">
          <mock:shadow-root>
            <mg-card class="mg-c-popover-content">
              <div class="mg-c-popover-content__title">
                <slot name="title"></slot>
              </div>
              <slot name="content"></slot>
            </mg-card>
            <slot name="arrow"></slot>
          </mock:shadow-root>
          <div data-popper-arrow slot="arrow" style="position: absolute;"></div>
          <div class="mg-c-menu-item__collapse-container mg-c-menu-item__collapse-container--first-level" slot="content">
            <slot></slot>
          </div>
        </mg-popover-content>
      </mg-popover>
    </mock:shadow-root>
    <span slot="label" title="joker">
      joker
    </span>
    <div data-mg-popover-guard="identifier-2-popover">
      <h2>
        This is a joker card
      </h2>
      <p>
        If you don't know the joker, you can watch the movie.
      </p>
    </div>
  </mg-menu-item>
  <mg-menu-item data-style-direction="horizontal" role="listitem" status="visible">
    <mock:shadow-root>
      <a class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--horizontal mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible" href="#bane">
        <slot name="image"></slot>
        <div class="mg-c-menu-item__navigation-button-center">
          <div class="mg-c-menu-item__navigation-button-text-content">
            <slot name="label"></slot>
            <slot name="information"></slot>
          </div>
        </div>
      </a>
      <div class="mg-c-menu-item__collapse-container mg-c-menu-item__collapse-container--first-level" hidden="">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <span slot="label" title="bane">
      bane
    </span>
  </mg-menu-item>
  <mg-item-more></mg-item-more>
</mg-menu>
`;

exports[`mg-menu MutationObserver vertical with args { label: 'batman menu', direction: 'vertical' } 1`] = `
<mg-menu aria-label="batman menu" direction="vertical" role="list">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <mg-menu-item data-style-direction="vertical" role="listitem" status="visible">
    <mock:shadow-root>
      <button aria-expanded="false" class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--vertical mg-c-menu-item__navigation-button--visible">
        <slot name="image"></slot>
        <div class="mg-c-menu-item__navigation-button-center">
          <div class="mg-c-menu-item__navigation-button-text-content">
            <slot name="label"></slot>
            <slot name="information"></slot>
          </div>
        </div>
        <span class="mg-c-menu-item__navigation-button-chevron">
          <mg-icon icon="chevron-down" size="small"></mg-icon>
        </span>
      </button>
      <div class="mg-c-menu-item__collapse-container" hidden="">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <span slot="label" title="batman">
      batman
    </span>
    <mg-menu aria-label="batman - submenu" direction="vertical" role="list">
      <mock:shadow-root>
        <slot></slot>
      </mock:shadow-root>
      <mg-menu-item data-level="2" data-style-direction="vertical" role="listitem" status="visible">
        <mock:shadow-root>
          <button aria-expanded="false" class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--vertical mg-c-menu-item__navigation-button--visible">
            <slot name="image"></slot>
            <div class="mg-c-menu-item__navigation-button-center">
              <div class="mg-c-menu-item__navigation-button-text-content">
                <slot name="label"></slot>
                <slot name="information"></slot>
              </div>
            </div>
            <span class="mg-c-menu-item__navigation-button-chevron">
              <mg-icon icon="chevron-down" size="small"></mg-icon>
            </span>
          </button>
          <div class="mg-c-menu-item__collapse-container" hidden="">
            <slot></slot>
          </div>
        </mock:shadow-root>
        <span slot="label" title="batman begins">
          batman begins
        </span>
        <mg-menu aria-label="batman begins - submenu" direction="vertical" role="list">
          <mock:shadow-root>
            <slot></slot>
          </mock:shadow-root>
          <mg-menu-item data-level="3" data-style-direction="vertical" role="listitem" status="visible">
            <mock:shadow-root>
              <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--vertical mg-c-menu-item__navigation-button--visible">
                <slot name="image"></slot>
                <div class="mg-c-menu-item__navigation-button-center">
                  <div class="mg-c-menu-item__navigation-button-text-content">
                    <slot name="label"></slot>
                    <slot name="information"></slot>
                  </div>
                </div>
              </button>
              <div class="mg-c-menu-item__collapse-container" hidden="">
                <slot></slot>
              </div>
            </mock:shadow-root>
            <span slot="label" title="movie">
              movie
            </span>
          </mg-menu-item>
        </mg-menu>
      </mg-menu-item>
      <mg-menu-item data-level="2" data-style-direction="vertical" role="listitem" status="visible">
        <mock:shadow-root>
          <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--vertical mg-c-menu-item__navigation-button--visible">
            <slot name="image"></slot>
            <div class="mg-c-menu-item__navigation-button-center">
              <div class="mg-c-menu-item__navigation-button-text-content">
                <slot name="label"></slot>
                <slot name="information"></slot>
              </div>
            </div>
          </button>
          <div class="mg-c-menu-item__collapse-container" hidden="">
            <slot></slot>
          </div>
        </mock:shadow-root>
        <span slot="label" title="joker: the dark knight">
          joker: the dark knight
        </span>
      </mg-menu-item>
      <mg-menu-item data-level="2" data-style-direction="vertical" role="listitem" status="visible">
        <mock:shadow-root>
          <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--vertical mg-c-menu-item__navigation-button--visible">
            <slot name="image"></slot>
            <div class="mg-c-menu-item__navigation-button-center">
              <div class="mg-c-menu-item__navigation-button-text-content">
                <slot name="label"></slot>
                <slot name="information"></slot>
              </div>
            </div>
          </button>
          <div class="mg-c-menu-item__collapse-container" hidden="">
            <slot></slot>
          </div>
        </mock:shadow-root>
        <span slot="label" title="bane: the dark knight rise">
          bane: the dark knight rise
        </span>
      </mg-menu-item>
    </mg-menu>
  </mg-menu-item>
  <mg-menu-item data-style-direction="vertical" role="listitem" status="visible">
    <mock:shadow-root>
      <button aria-expanded="false" class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--vertical mg-c-menu-item__navigation-button--visible">
        <slot name="image"></slot>
        <div class="mg-c-menu-item__navigation-button-center">
          <div class="mg-c-menu-item__navigation-button-text-content">
            <slot name="label"></slot>
            <slot name="information"></slot>
          </div>
        </div>
        <span class="mg-c-menu-item__navigation-button-chevron">
          <mg-icon icon="chevron-down" size="small"></mg-icon>
        </span>
      </button>
      <div class="mg-c-menu-item__collapse-container" hidden="">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <span slot="label" title="joker">
      joker
    </span>
    <div>
      <h2>
        This is a joker card
      </h2>
      <p>
        If you don't know the joker, you can watch the movie.
      </p>
    </div>
  </mg-menu-item>
  <mg-menu-item data-style-direction="vertical" role="listitem" status="visible">
    <mock:shadow-root>
      <a class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--vertical mg-c-menu-item__navigation-button--visible" href="#bane">
        <slot name="image"></slot>
        <div class="mg-c-menu-item__navigation-button-center">
          <div class="mg-c-menu-item__navigation-button-text-content">
            <slot name="label"></slot>
            <slot name="information"></slot>
          </div>
        </div>
      </a>
      <div class="mg-c-menu-item__collapse-container" hidden="">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <span slot="label" title="bane">
      bane
    </span>
  </mg-menu-item>
</mg-menu>
`;

exports[`mg-menu MutationObserver vertical with args { label: 'batman menu', direction: 'vertical' } 2`] = `
<mg-menu aria-label="batman menu" direction="vertical" role="list">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <mg-menu-item data-style-direction="vertical" role="listitem" status="visible">
    <mock:shadow-root>
      <button aria-expanded="false" class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--vertical mg-c-menu-item__navigation-button--visible">
        <slot name="image"></slot>
        <div class="mg-c-menu-item__navigation-button-center">
          <div class="mg-c-menu-item__navigation-button-text-content">
            <slot name="label"></slot>
            <slot name="information"></slot>
          </div>
        </div>
        <span class="mg-c-menu-item__navigation-button-chevron">
          <mg-icon icon="chevron-down" size="small"></mg-icon>
        </span>
      </button>
      <div class="mg-c-menu-item__collapse-container" hidden="">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <span slot="label" title="batman">
      batman
    </span>
    <mg-menu aria-label="batman - submenu" direction="vertical" role="list">
      <mock:shadow-root>
        <slot></slot>
      </mock:shadow-root>
      <mg-menu-item data-level="2" data-style-direction="vertical" role="listitem" status="visible">
        <mock:shadow-root>
          <button aria-expanded="false" class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--vertical mg-c-menu-item__navigation-button--visible">
            <slot name="image"></slot>
            <div class="mg-c-menu-item__navigation-button-center">
              <div class="mg-c-menu-item__navigation-button-text-content">
                <slot name="label"></slot>
                <slot name="information"></slot>
              </div>
            </div>
            <span class="mg-c-menu-item__navigation-button-chevron">
              <mg-icon icon="chevron-down" size="small"></mg-icon>
            </span>
          </button>
          <div class="mg-c-menu-item__collapse-container" hidden="">
            <slot></slot>
          </div>
        </mock:shadow-root>
        <span slot="label" title="batman begins">
          batman begins
        </span>
        <mg-menu aria-label="batman begins - submenu" direction="vertical" role="list">
          <mock:shadow-root>
            <slot></slot>
          </mock:shadow-root>
          <mg-menu-item data-level="3" data-style-direction="vertical" role="listitem" status="visible">
            <mock:shadow-root>
              <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--vertical mg-c-menu-item__navigation-button--visible">
                <slot name="image"></slot>
                <div class="mg-c-menu-item__navigation-button-center">
                  <div class="mg-c-menu-item__navigation-button-text-content">
                    <slot name="label"></slot>
                    <slot name="information"></slot>
                  </div>
                </div>
              </button>
              <div class="mg-c-menu-item__collapse-container" hidden="">
                <slot></slot>
              </div>
            </mock:shadow-root>
            <span slot="label" title="movie">
              movie
            </span>
          </mg-menu-item>
        </mg-menu>
      </mg-menu-item>
      <mg-menu-item data-level="2" data-style-direction="vertical" role="listitem" status="visible">
        <mock:shadow-root>
          <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--vertical mg-c-menu-item__navigation-button--visible">
            <slot name="image"></slot>
            <div class="mg-c-menu-item__navigation-button-center">
              <div class="mg-c-menu-item__navigation-button-text-content">
                <slot name="label"></slot>
                <slot name="information"></slot>
              </div>
            </div>
          </button>
          <div class="mg-c-menu-item__collapse-container" hidden="">
            <slot></slot>
          </div>
        </mock:shadow-root>
        <span slot="label" title="joker: the dark knight">
          joker: the dark knight
        </span>
      </mg-menu-item>
      <mg-menu-item data-level="2" data-style-direction="vertical" role="listitem" status="visible">
        <mock:shadow-root>
          <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--vertical mg-c-menu-item__navigation-button--visible">
            <slot name="image"></slot>
            <div class="mg-c-menu-item__navigation-button-center">
              <div class="mg-c-menu-item__navigation-button-text-content">
                <slot name="label"></slot>
                <slot name="information"></slot>
              </div>
            </div>
          </button>
          <div class="mg-c-menu-item__collapse-container" hidden="">
            <slot></slot>
          </div>
        </mock:shadow-root>
        <span slot="label" title="bane: the dark knight rise">
          bane: the dark knight rise
        </span>
      </mg-menu-item>
    </mg-menu>
  </mg-menu-item>
  <mg-menu-item data-style-direction="vertical" role="listitem" status="visible">
    <mock:shadow-root>
      <button aria-expanded="false" class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--vertical mg-c-menu-item__navigation-button--visible">
        <slot name="image"></slot>
        <div class="mg-c-menu-item__navigation-button-center">
          <div class="mg-c-menu-item__navigation-button-text-content">
            <slot name="label"></slot>
            <slot name="information"></slot>
          </div>
        </div>
        <span class="mg-c-menu-item__navigation-button-chevron">
          <mg-icon icon="chevron-down" size="small"></mg-icon>
        </span>
      </button>
      <div class="mg-c-menu-item__collapse-container" hidden="">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <span slot="label" title="joker">
      joker
    </span>
    <div>
      <h2>
        This is a joker card
      </h2>
      <p>
        If you don't know the joker, you can watch the movie.
      </p>
    </div>
  </mg-menu-item>
  <mg-menu-item data-style-direction="vertical" role="listitem" status="visible">
    <mock:shadow-root>
      <a class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--vertical mg-c-menu-item__navigation-button--visible" href="#bane">
        <slot name="image"></slot>
        <div class="mg-c-menu-item__navigation-button-center">
          <div class="mg-c-menu-item__navigation-button-text-content">
            <slot name="label"></slot>
            <slot name="information"></slot>
          </div>
        </div>
      </a>
      <div class="mg-c-menu-item__collapse-container" hidden="">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <span slot="label" title="bane">
      bane
    </span>
  </mg-menu-item>
</mg-menu>
`;

exports[`mg-menu mg-item-more should manage "mg-item-more" event click 1`] = `
<mg-menu aria-label="batman menu" direction="horizontal" role="list">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <mg-menu-item data-overflow-base-index="0" data-style-direction="horizontal" role="listitem" status="visible">
    <mock:shadow-root>
      <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--horizontal mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible">
        <slot name="image"></slot>
        <div class="mg-c-menu-item__navigation-button-center">
          <div class="mg-c-menu-item__navigation-button-text-content">
            <slot name="label"></slot>
            <slot name="information"></slot>
          </div>
        </div>
      </button>
      <div class="mg-c-menu-item__collapse-container mg-c-menu-item__collapse-container--first-level" hidden="">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <span slot="label" title="batman">
      batman
    </span>
  </mg-menu-item>
  <mg-menu-item data-overflow-base-index="1" data-style-direction="horizontal" role="listitem" status="visible">
    <mock:shadow-root>
      <mg-popover>
        <mock:shadow-root>
          <slot></slot>
          <slot name="content"></slot>
        </mock:shadow-root>
        <button aria-controls="mg-popover-test_1" aria-expanded="false" class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--horizontal mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible">
          <slot name="image"></slot>
          <div class="mg-c-menu-item__navigation-button-center">
            <div class="mg-c-menu-item__navigation-button-text-content">
              <slot name="label"></slot>
              <slot name="information"></slot>
            </div>
          </div>
          <span class="mg-c-menu-item__navigation-button-chevron">
            <mg-icon icon="chevron-down" size="small"></mg-icon>
          </span>
        </button>
        <mg-popover-content data-arrow-hide data-popper-placement="bottom-start" data-popper-reference-hidden id="mg-popover-test_1" slot="content" style="position: fixed; left: 0; top: 0; margin: 0; right: auto; bottom: auto; transform: translate(0px, 0px);">
          <mock:shadow-root>
            <mg-card class="mg-c-popover-content">
              <div class="mg-c-popover-content__title">
                <slot name="title"></slot>
              </div>
              <slot name="content"></slot>
            </mg-card>
            <slot name="arrow"></slot>
          </mock:shadow-root>
          <div data-popper-arrow slot="arrow" style="position: absolute;"></div>
          <div class="mg-c-menu-item__collapse-container mg-c-menu-item__collapse-container--first-level" slot="content">
            <slot></slot>
          </div>
        </mg-popover-content>
      </mg-popover>
    </mock:shadow-root>
    <span slot="label" title="joker">
      joker
    </span>
    <div data-mg-popover-guard="identifier-2-popover">
      <h2>
        This is a joker card
      </h2>
      <p>
        If you don't know the joker, you can watch the movie.
      </p>
    </div>
  </mg-menu-item>
  <mg-menu-item data-overflow-base-index="2" data-style-direction="horizontal" role="listitem" status="visible">
    <mock:shadow-root>
      <a class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--horizontal mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible" href="#bane">
        <slot name="image"></slot>
        <div class="mg-c-menu-item__navigation-button-center">
          <div class="mg-c-menu-item__navigation-button-text-content">
            <slot name="label"></slot>
            <slot name="information"></slot>
          </div>
        </div>
      </a>
      <div class="mg-c-menu-item__collapse-container mg-c-menu-item__collapse-container--first-level" hidden="">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <span slot="label" title="bane">
      bane
    </span>
  </mg-menu-item>
  <mg-item-more role="listitem">
    <mock:shadow-root>
      <mg-menu-item data-overflow-more data-size="regular" role="presentation" status="visible">
        <mock:shadow-root>
          <button aria-expanded="false" class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible">
            <slot name="image"></slot>
            <div class="mg-c-menu-item__navigation-button-center">
              <div class="mg-c-menu-item__navigation-button-text-content">
                <slot name="label"></slot>
                <slot name="information"></slot>
              </div>
            </div>
            <span class="mg-c-menu-item__navigation-button-chevron">
              <mg-icon icon="chevron-down" size="small"></mg-icon>
            </span>
          </button>
          <div class="mg-c-menu-item__collapse-container" hidden="">
            <slot></slot>
          </div>
        </mock:shadow-root>
        <mg-icon icon="ellipsis-vertical" slot="image"></mg-icon>
        <span class="mg-u-visually-hidden" slot="label" title="Additional menu">
          Additional menu
        </span>
        <mg-menu aria-label="Additional menu" direction="vertical" role="list">
          <mock:shadow-root>
            <slot></slot>
          </mock:shadow-root>
          <mg-menu-item data-overflow-proxy-index="0" data-style-direction="horizontal" role="listitem" status="visible">
            <mock:shadow-root>
              <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible">
                <slot name="image"></slot>
                <div class="mg-c-menu-item__navigation-button-center">
                  <div class="mg-c-menu-item__navigation-button-text-content">
                    <slot name="label"></slot>
                    <slot name="information"></slot>
                  </div>
                </div>
              </button>
              <div class="mg-c-menu-item__collapse-container" hidden="">
                <slot></slot>
              </div>
            </mock:shadow-root>
            <span slot="label" title="batman">
              batman
            </span>
          </mg-menu-item>
          <mg-menu-item data-overflow-proxy-index="1" data-style-direction="horizontal" role="listitem" status="visible">
            <mock:shadow-root>
              <button aria-expanded="false" class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible">
                <slot name="image"></slot>
                <div class="mg-c-menu-item__navigation-button-center">
                  <div class="mg-c-menu-item__navigation-button-text-content">
                    <slot name="label"></slot>
                    <slot name="information"></slot>
                  </div>
                </div>
                <span class="mg-c-menu-item__navigation-button-chevron">
                  <mg-icon icon="chevron-down" size="small"></mg-icon>
                </span>
              </button>
              <div class="mg-c-menu-item__collapse-container" hidden="">
                <slot></slot>
              </div>
            </mock:shadow-root>
            <span slot="label" title="joker">
              joker
            </span>
            <div data-mg-popover-guard="identifier-2-popover">
              <h2>
                This is a joker card
              </h2>
              <p>
                If you don't know the joker, you can watch the movie.
              </p>
            </div>
          </mg-menu-item>
          <mg-menu-item data-overflow-proxy-index="2" data-style-direction="horizontal" role="listitem" status="visible">
            <mock:shadow-root>
              <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible">
                <slot name="image"></slot>
                <div class="mg-c-menu-item__navigation-button-center">
                  <div class="mg-c-menu-item__navigation-button-text-content">
                    <slot name="label"></slot>
                    <slot name="information"></slot>
                  </div>
                </div>
              </button>
              <div class="mg-c-menu-item__collapse-container" hidden="">
                <slot></slot>
              </div>
            </mock:shadow-root>
            <span slot="label" title="bane">
              bane
            </span>
          </mg-menu-item>
        </mg-menu>
      </mg-menu-item>
    </mock:shadow-root>
  </mg-item-more>
</mg-menu>
`;

exports[`mg-menu mg-item-more should manage "mg-item-more" event click 2`] = `
<mg-menu aria-label="batman menu" direction="horizontal" role="list">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <mg-menu-item data-overflow-base-index="0" data-style-direction="horizontal" role="listitem" status="visible">
    <mock:shadow-root>
      <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--horizontal mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible">
        <slot name="image"></slot>
        <div class="mg-c-menu-item__navigation-button-center">
          <div class="mg-c-menu-item__navigation-button-text-content">
            <slot name="label"></slot>
            <slot name="information"></slot>
          </div>
        </div>
      </button>
      <div class="mg-c-menu-item__collapse-container mg-c-menu-item__collapse-container--first-level" hidden="">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <span slot="label" title="batman">
      batman
    </span>
  </mg-menu-item>
  <mg-menu-item data-overflow-base-index="1" data-style-direction="horizontal" role="listitem" status="visible">
    <mock:shadow-root>
      <mg-popover>
        <mock:shadow-root>
          <slot></slot>
          <slot name="content"></slot>
        </mock:shadow-root>
        <button aria-controls="mg-popover-test_1" aria-expanded="false" class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--horizontal mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible">
          <slot name="image"></slot>
          <div class="mg-c-menu-item__navigation-button-center">
            <div class="mg-c-menu-item__navigation-button-text-content">
              <slot name="label"></slot>
              <slot name="information"></slot>
            </div>
          </div>
          <span class="mg-c-menu-item__navigation-button-chevron">
            <mg-icon icon="chevron-down" size="small"></mg-icon>
          </span>
        </button>
        <mg-popover-content data-arrow-hide data-popper-placement="bottom-start" data-popper-reference-hidden id="mg-popover-test_1" slot="content" style="position: fixed; left: 0; top: 0; margin: 0; right: auto; bottom: auto; transform: translate(0px, 0px);">
          <mock:shadow-root>
            <mg-card class="mg-c-popover-content">
              <div class="mg-c-popover-content__title">
                <slot name="title"></slot>
              </div>
              <slot name="content"></slot>
            </mg-card>
            <slot name="arrow"></slot>
          </mock:shadow-root>
          <div data-popper-arrow slot="arrow" style="position: absolute;"></div>
          <div class="mg-c-menu-item__collapse-container mg-c-menu-item__collapse-container--first-level" slot="content">
            <slot></slot>
          </div>
        </mg-popover-content>
      </mg-popover>
    </mock:shadow-root>
    <span slot="label" title="joker">
      joker
    </span>
    <div data-mg-popover-guard="identifier-2-popover">
      <h2>
        This is a joker card
      </h2>
      <p>
        If you don't know the joker, you can watch the movie.
      </p>
    </div>
  </mg-menu-item>
  <mg-menu-item data-overflow-base-index="2" data-style-direction="horizontal" role="listitem" status="visible">
    <mock:shadow-root>
      <a class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--horizontal mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible" href="#bane">
        <slot name="image"></slot>
        <div class="mg-c-menu-item__navigation-button-center">
          <div class="mg-c-menu-item__navigation-button-text-content">
            <slot name="label"></slot>
            <slot name="information"></slot>
          </div>
        </div>
      </a>
      <div class="mg-c-menu-item__collapse-container mg-c-menu-item__collapse-container--first-level" hidden="">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <span slot="label" title="bane">
      bane
    </span>
  </mg-menu-item>
  <mg-item-more role="listitem">
    <mock:shadow-root>
      <mg-menu-item data-overflow-more data-size="regular" role="presentation" status="visible">
        <mock:shadow-root>
          <button aria-expanded="true" class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible">
            <slot name="image"></slot>
            <div class="mg-c-menu-item__navigation-button-center">
              <div class="mg-c-menu-item__navigation-button-text-content">
                <slot name="label"></slot>
                <slot name="information"></slot>
              </div>
            </div>
            <span class="mg-c-menu-item__navigation-button-chevron mg-c-menu-item__navigation-button-chevron--rotate">
              <mg-icon icon="chevron-down" size="small"></mg-icon>
            </span>
          </button>
          <div class="mg-c-menu-item__collapse-container">
            <slot></slot>
          </div>
        </mock:shadow-root>
        <mg-icon icon="ellipsis-vertical" slot="image"></mg-icon>
        <span class="mg-u-visually-hidden" slot="label" title="Additional menu">
          Additional menu
        </span>
        <mg-menu aria-label="Additional menu" direction="vertical" role="list">
          <mock:shadow-root>
            <slot></slot>
          </mock:shadow-root>
          <mg-menu-item data-overflow-proxy-index="0" data-style-direction="horizontal" role="listitem" status="visible">
            <mock:shadow-root>
              <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible">
                <slot name="image"></slot>
                <div class="mg-c-menu-item__navigation-button-center">
                  <div class="mg-c-menu-item__navigation-button-text-content">
                    <slot name="label"></slot>
                    <slot name="information"></slot>
                  </div>
                </div>
              </button>
              <div class="mg-c-menu-item__collapse-container" hidden="">
                <slot></slot>
              </div>
            </mock:shadow-root>
            <span slot="label" title="batman">
              batman
            </span>
          </mg-menu-item>
          <mg-menu-item data-overflow-proxy-index="1" data-style-direction="horizontal" role="listitem" status="visible">
            <mock:shadow-root>
              <button aria-expanded="false" class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible">
                <slot name="image"></slot>
                <div class="mg-c-menu-item__navigation-button-center">
                  <div class="mg-c-menu-item__navigation-button-text-content">
                    <slot name="label"></slot>
                    <slot name="information"></slot>
                  </div>
                </div>
                <span class="mg-c-menu-item__navigation-button-chevron">
                  <mg-icon icon="chevron-down" size="small"></mg-icon>
                </span>
              </button>
              <div class="mg-c-menu-item__collapse-container" hidden="">
                <slot></slot>
              </div>
            </mock:shadow-root>
            <span slot="label" title="joker">
              joker
            </span>
            <div data-mg-popover-guard="identifier-2-popover">
              <h2>
                This is a joker card
              </h2>
              <p>
                If you don't know the joker, you can watch the movie.
              </p>
            </div>
          </mg-menu-item>
          <mg-menu-item data-overflow-proxy-index="2" data-style-direction="horizontal" role="listitem" status="visible">
            <mock:shadow-root>
              <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible">
                <slot name="image"></slot>
                <div class="mg-c-menu-item__navigation-button-center">
                  <div class="mg-c-menu-item__navigation-button-text-content">
                    <slot name="label"></slot>
                    <slot name="information"></slot>
                  </div>
                </div>
              </button>
              <div class="mg-c-menu-item__collapse-container" hidden="">
                <slot></slot>
              </div>
            </mock:shadow-root>
            <span slot="label" title="bane">
              bane
            </span>
          </mg-menu-item>
        </mg-menu>
      </mg-menu-item>
    </mock:shadow-root>
  </mg-item-more>
</mg-menu>
`;

exports[`mg-menu mg-item-more should manage "mg-item-more" event focus 1`] = `
<mg-menu aria-label="batman menu" direction="horizontal" role="list">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <mg-menu-item data-overflow-base-index="0" data-style-direction="horizontal" role="listitem" status="visible">
    <mock:shadow-root>
      <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--horizontal mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible">
        <slot name="image"></slot>
        <div class="mg-c-menu-item__navigation-button-center">
          <div class="mg-c-menu-item__navigation-button-text-content">
            <slot name="label"></slot>
            <slot name="information"></slot>
          </div>
        </div>
      </button>
      <div class="mg-c-menu-item__collapse-container mg-c-menu-item__collapse-container--first-level" hidden="">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <span slot="label" title="batman">
      batman
    </span>
  </mg-menu-item>
  <mg-menu-item data-overflow-base-index="1" data-style-direction="horizontal" role="listitem" status="visible">
    <mock:shadow-root>
      <mg-popover>
        <mock:shadow-root>
          <slot></slot>
          <slot name="content"></slot>
        </mock:shadow-root>
        <button aria-controls="mg-popover-test_1" aria-expanded="false" class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--horizontal mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible">
          <slot name="image"></slot>
          <div class="mg-c-menu-item__navigation-button-center">
            <div class="mg-c-menu-item__navigation-button-text-content">
              <slot name="label"></slot>
              <slot name="information"></slot>
            </div>
          </div>
          <span class="mg-c-menu-item__navigation-button-chevron">
            <mg-icon icon="chevron-down" size="small"></mg-icon>
          </span>
        </button>
        <mg-popover-content data-arrow-hide data-popper-placement="bottom-start" data-popper-reference-hidden id="mg-popover-test_1" slot="content" style="position: fixed; left: 0; top: 0; margin: 0; right: auto; bottom: auto; transform: translate(0px, 0px);">
          <mock:shadow-root>
            <mg-card class="mg-c-popover-content">
              <div class="mg-c-popover-content__title">
                <slot name="title"></slot>
              </div>
              <slot name="content"></slot>
            </mg-card>
            <slot name="arrow"></slot>
          </mock:shadow-root>
          <div data-popper-arrow slot="arrow" style="position: absolute;"></div>
          <div class="mg-c-menu-item__collapse-container mg-c-menu-item__collapse-container--first-level" slot="content">
            <slot></slot>
          </div>
        </mg-popover-content>
      </mg-popover>
    </mock:shadow-root>
    <span slot="label" title="joker">
      joker
    </span>
    <div data-mg-popover-guard="identifier-2-popover">
      <h2>
        This is a joker card
      </h2>
      <p>
        If you don't know the joker, you can watch the movie.
      </p>
    </div>
  </mg-menu-item>
  <mg-menu-item data-overflow-base-index="2" data-style-direction="horizontal" role="listitem" status="visible">
    <mock:shadow-root>
      <a class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--horizontal mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible" href="#bane">
        <slot name="image"></slot>
        <div class="mg-c-menu-item__navigation-button-center">
          <div class="mg-c-menu-item__navigation-button-text-content">
            <slot name="label"></slot>
            <slot name="information"></slot>
          </div>
        </div>
      </a>
      <div class="mg-c-menu-item__collapse-container mg-c-menu-item__collapse-container--first-level" hidden="">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <span slot="label" title="bane">
      bane
    </span>
  </mg-menu-item>
  <mg-item-more role="listitem">
    <mock:shadow-root>
      <mg-menu-item data-overflow-more data-size="regular" role="presentation" status="visible">
        <mock:shadow-root>
          <button aria-expanded="false" class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible">
            <slot name="image"></slot>
            <div class="mg-c-menu-item__navigation-button-center">
              <div class="mg-c-menu-item__navigation-button-text-content">
                <slot name="label"></slot>
                <slot name="information"></slot>
              </div>
            </div>
            <span class="mg-c-menu-item__navigation-button-chevron">
              <mg-icon icon="chevron-down" size="small"></mg-icon>
            </span>
          </button>
          <div class="mg-c-menu-item__collapse-container" hidden="">
            <slot></slot>
          </div>
        </mock:shadow-root>
        <mg-icon icon="ellipsis-vertical" slot="image"></mg-icon>
        <span class="mg-u-visually-hidden" slot="label" title="Additional menu">
          Additional menu
        </span>
        <mg-menu aria-label="Additional menu" direction="vertical" role="list">
          <mock:shadow-root>
            <slot></slot>
          </mock:shadow-root>
          <mg-menu-item data-overflow-proxy-index="0" data-style-direction="horizontal" role="listitem" status="visible">
            <mock:shadow-root>
              <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible">
                <slot name="image"></slot>
                <div class="mg-c-menu-item__navigation-button-center">
                  <div class="mg-c-menu-item__navigation-button-text-content">
                    <slot name="label"></slot>
                    <slot name="information"></slot>
                  </div>
                </div>
              </button>
              <div class="mg-c-menu-item__collapse-container" hidden="">
                <slot></slot>
              </div>
            </mock:shadow-root>
            <span slot="label" title="batman">
              batman
            </span>
          </mg-menu-item>
          <mg-menu-item data-overflow-proxy-index="1" data-style-direction="horizontal" role="listitem" status="visible">
            <mock:shadow-root>
              <button aria-expanded="false" class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible">
                <slot name="image"></slot>
                <div class="mg-c-menu-item__navigation-button-center">
                  <div class="mg-c-menu-item__navigation-button-text-content">
                    <slot name="label"></slot>
                    <slot name="information"></slot>
                  </div>
                </div>
                <span class="mg-c-menu-item__navigation-button-chevron">
                  <mg-icon icon="chevron-down" size="small"></mg-icon>
                </span>
              </button>
              <div class="mg-c-menu-item__collapse-container" hidden="">
                <slot></slot>
              </div>
            </mock:shadow-root>
            <span slot="label" title="joker">
              joker
            </span>
            <div data-mg-popover-guard="identifier-2-popover">
              <h2>
                This is a joker card
              </h2>
              <p>
                If you don't know the joker, you can watch the movie.
              </p>
            </div>
          </mg-menu-item>
          <mg-menu-item data-overflow-proxy-index="2" data-style-direction="horizontal" role="listitem" status="visible">
            <mock:shadow-root>
              <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible">
                <slot name="image"></slot>
                <div class="mg-c-menu-item__navigation-button-center">
                  <div class="mg-c-menu-item__navigation-button-text-content">
                    <slot name="label"></slot>
                    <slot name="information"></slot>
                  </div>
                </div>
              </button>
              <div class="mg-c-menu-item__collapse-container" hidden="">
                <slot></slot>
              </div>
            </mock:shadow-root>
            <span slot="label" title="bane">
              bane
            </span>
          </mg-menu-item>
        </mg-menu>
      </mg-menu-item>
    </mock:shadow-root>
  </mg-item-more>
</mg-menu>
`;

exports[`mg-menu mg-item-more should manage "mg-item-more" event focus 2`] = `
<mg-menu aria-label="batman menu" direction="horizontal" role="list">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <mg-menu-item data-overflow-base-index="0" data-style-direction="horizontal" role="listitem" status="visible">
    <mock:shadow-root>
      <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--horizontal mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible">
        <slot name="image"></slot>
        <div class="mg-c-menu-item__navigation-button-center">
          <div class="mg-c-menu-item__navigation-button-text-content">
            <slot name="label"></slot>
            <slot name="information"></slot>
          </div>
        </div>
      </button>
      <div class="mg-c-menu-item__collapse-container mg-c-menu-item__collapse-container--first-level" hidden="">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <span slot="label" title="batman">
      batman
    </span>
  </mg-menu-item>
  <mg-menu-item data-overflow-base-index="1" data-style-direction="horizontal" role="listitem" status="visible">
    <mock:shadow-root>
      <mg-popover>
        <mock:shadow-root>
          <slot></slot>
          <slot name="content"></slot>
        </mock:shadow-root>
        <button aria-controls="mg-popover-test_1" aria-expanded="false" class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--horizontal mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible">
          <slot name="image"></slot>
          <div class="mg-c-menu-item__navigation-button-center">
            <div class="mg-c-menu-item__navigation-button-text-content">
              <slot name="label"></slot>
              <slot name="information"></slot>
            </div>
          </div>
          <span class="mg-c-menu-item__navigation-button-chevron">
            <mg-icon icon="chevron-down" size="small"></mg-icon>
          </span>
        </button>
        <mg-popover-content data-arrow-hide data-popper-placement="bottom-start" data-popper-reference-hidden id="mg-popover-test_1" slot="content" style="position: fixed; left: 0; top: 0; margin: 0; right: auto; bottom: auto; transform: translate(0px, 0px);">
          <mock:shadow-root>
            <mg-card class="mg-c-popover-content">
              <div class="mg-c-popover-content__title">
                <slot name="title"></slot>
              </div>
              <slot name="content"></slot>
            </mg-card>
            <slot name="arrow"></slot>
          </mock:shadow-root>
          <div data-popper-arrow slot="arrow" style="position: absolute;"></div>
          <div class="mg-c-menu-item__collapse-container mg-c-menu-item__collapse-container--first-level" slot="content">
            <slot></slot>
          </div>
        </mg-popover-content>
      </mg-popover>
    </mock:shadow-root>
    <span slot="label" title="joker">
      joker
    </span>
    <div data-mg-popover-guard="identifier-2-popover">
      <h2>
        This is a joker card
      </h2>
      <p>
        If you don't know the joker, you can watch the movie.
      </p>
    </div>
  </mg-menu-item>
  <mg-menu-item data-overflow-base-index="2" data-style-direction="horizontal" role="listitem" status="visible">
    <mock:shadow-root>
      <a class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--horizontal mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible" href="#bane">
        <slot name="image"></slot>
        <div class="mg-c-menu-item__navigation-button-center">
          <div class="mg-c-menu-item__navigation-button-text-content">
            <slot name="label"></slot>
            <slot name="information"></slot>
          </div>
        </div>
      </a>
      <div class="mg-c-menu-item__collapse-container mg-c-menu-item__collapse-container--first-level" hidden="">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <span slot="label" title="bane">
      bane
    </span>
  </mg-menu-item>
  <mg-item-more role="listitem">
    <mock:shadow-root>
      <mg-menu-item data-overflow-more data-size="regular" role="presentation" status="visible">
        <mock:shadow-root>
          <button aria-expanded="false" class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible">
            <slot name="image"></slot>
            <div class="mg-c-menu-item__navigation-button-center">
              <div class="mg-c-menu-item__navigation-button-text-content">
                <slot name="label"></slot>
                <slot name="information"></slot>
              </div>
            </div>
            <span class="mg-c-menu-item__navigation-button-chevron">
              <mg-icon icon="chevron-down" size="small"></mg-icon>
            </span>
          </button>
          <div class="mg-c-menu-item__collapse-container" hidden="">
            <slot></slot>
          </div>
        </mock:shadow-root>
        <mg-icon icon="ellipsis-vertical" slot="image"></mg-icon>
        <span class="mg-u-visually-hidden" slot="label" title="Additional menu">
          Additional menu
        </span>
        <mg-menu aria-label="Additional menu" direction="vertical" role="list">
          <mock:shadow-root>
            <slot></slot>
          </mock:shadow-root>
          <mg-menu-item data-overflow-proxy-index="0" data-style-direction="horizontal" role="listitem" status="visible">
            <mock:shadow-root>
              <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible">
                <slot name="image"></slot>
                <div class="mg-c-menu-item__navigation-button-center">
                  <div class="mg-c-menu-item__navigation-button-text-content">
                    <slot name="label"></slot>
                    <slot name="information"></slot>
                  </div>
                </div>
              </button>
              <div class="mg-c-menu-item__collapse-container" hidden="">
                <slot></slot>
              </div>
            </mock:shadow-root>
            <span slot="label" title="batman">
              batman
            </span>
          </mg-menu-item>
          <mg-menu-item data-overflow-proxy-index="1" data-style-direction="horizontal" role="listitem" status="visible">
            <mock:shadow-root>
              <button aria-expanded="false" class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible">
                <slot name="image"></slot>
                <div class="mg-c-menu-item__navigation-button-center">
                  <div class="mg-c-menu-item__navigation-button-text-content">
                    <slot name="label"></slot>
                    <slot name="information"></slot>
                  </div>
                </div>
                <span class="mg-c-menu-item__navigation-button-chevron">
                  <mg-icon icon="chevron-down" size="small"></mg-icon>
                </span>
              </button>
              <div class="mg-c-menu-item__collapse-container" hidden="">
                <slot></slot>
              </div>
            </mock:shadow-root>
            <span slot="label" title="joker">
              joker
            </span>
            <div data-mg-popover-guard="identifier-2-popover">
              <h2>
                This is a joker card
              </h2>
              <p>
                If you don't know the joker, you can watch the movie.
              </p>
            </div>
          </mg-menu-item>
          <mg-menu-item data-overflow-proxy-index="2" data-style-direction="horizontal" role="listitem" status="visible">
            <mock:shadow-root>
              <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible">
                <slot name="image"></slot>
                <div class="mg-c-menu-item__navigation-button-center">
                  <div class="mg-c-menu-item__navigation-button-text-content">
                    <slot name="label"></slot>
                    <slot name="information"></slot>
                  </div>
                </div>
              </button>
              <div class="mg-c-menu-item__collapse-container" hidden="">
                <slot></slot>
              </div>
            </mock:shadow-root>
            <span slot="label" title="bane">
              bane
            </span>
          </mg-menu-item>
        </mg-menu>
      </mg-menu-item>
    </mock:shadow-root>
  </mg-item-more>
</mg-menu>
`;

exports[`mg-menu render with args { label: 'batman menu' } 1`] = `
<mg-menu aria-label="batman menu" direction="horizontal" role="list">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <mg-menu-item data-style-direction="horizontal" role="listitem" status="visible">
    <mock:shadow-root>
      <mg-popover>
        <mock:shadow-root>
          <slot></slot>
          <slot name="content"></slot>
        </mock:shadow-root>
        <button aria-controls="mg-popover-test_0" aria-expanded="false" class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--horizontal mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible">
          <slot name="image"></slot>
          <div class="mg-c-menu-item__navigation-button-center">
            <div class="mg-c-menu-item__navigation-button-text-content">
              <slot name="label"></slot>
              <slot name="information"></slot>
            </div>
          </div>
          <span class="mg-c-menu-item__navigation-button-chevron">
            <mg-icon icon="chevron-down" size="small"></mg-icon>
          </span>
        </button>
        <mg-popover-content data-arrow-hide data-popper-placement="bottom-start" data-popper-reference-hidden id="mg-popover-test_0" slot="content" style="position: fixed; left: 0; top: 0; margin: 0; right: auto; bottom: auto; transform: translate(0px, 0px);">
          <mock:shadow-root>
            <mg-card class="mg-c-popover-content">
              <div class="mg-c-popover-content__title">
                <slot name="title"></slot>
              </div>
              <slot name="content"></slot>
            </mg-card>
            <slot name="arrow"></slot>
          </mock:shadow-root>
          <div data-popper-arrow slot="arrow" style="position: absolute;"></div>
          <div class="mg-c-menu-item__collapse-container mg-c-menu-item__collapse-container--first-level" slot="content">
            <slot></slot>
          </div>
        </mg-popover-content>
      </mg-popover>
    </mock:shadow-root>
    <span slot="label" title="batman">
      batman
    </span>
    <mg-menu aria-label="batman - submenu" direction="vertical" role="list">
      <mock:shadow-root>
        <slot></slot>
      </mock:shadow-root>
      <mg-menu-item data-style-direction="vertical" role="listitem" status="visible">
        <mock:shadow-root>
          <button aria-expanded="false" class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--vertical mg-c-menu-item__navigation-button--visible">
            <slot name="image"></slot>
            <div class="mg-c-menu-item__navigation-button-center">
              <div class="mg-c-menu-item__navigation-button-text-content">
                <slot name="label"></slot>
                <slot name="information"></slot>
              </div>
            </div>
            <span class="mg-c-menu-item__navigation-button-chevron">
              <mg-icon icon="chevron-down" size="small"></mg-icon>
            </span>
          </button>
          <div class="mg-c-menu-item__collapse-container" hidden="">
            <slot></slot>
          </div>
        </mock:shadow-root>
        <span slot="label" title="batman begins">
          batman begins
        </span>
        <mg-menu aria-label="batman begins - submenu" direction="vertical" role="list">
          <mock:shadow-root>
            <slot></slot>
          </mock:shadow-root>
          <mg-menu-item data-level="2" data-style-direction="vertical" role="listitem" status="visible">
            <mock:shadow-root>
              <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--vertical mg-c-menu-item__navigation-button--visible">
                <slot name="image"></slot>
                <div class="mg-c-menu-item__navigation-button-center">
                  <div class="mg-c-menu-item__navigation-button-text-content">
                    <slot name="label"></slot>
                    <slot name="information"></slot>
                  </div>
                </div>
              </button>
              <div class="mg-c-menu-item__collapse-container" hidden="">
                <slot></slot>
              </div>
            </mock:shadow-root>
            <span slot="label" title="movie">
              movie
            </span>
          </mg-menu-item>
        </mg-menu>
      </mg-menu-item>
      <mg-menu-item data-style-direction="vertical" role="listitem" status="visible">
        <mock:shadow-root>
          <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--vertical mg-c-menu-item__navigation-button--visible">
            <slot name="image"></slot>
            <div class="mg-c-menu-item__navigation-button-center">
              <div class="mg-c-menu-item__navigation-button-text-content">
                <slot name="label"></slot>
                <slot name="information"></slot>
              </div>
            </div>
          </button>
          <div class="mg-c-menu-item__collapse-container" hidden="">
            <slot></slot>
          </div>
        </mock:shadow-root>
        <span slot="label" title="joker: the dark knight">
          joker: the dark knight
        </span>
      </mg-menu-item>
      <mg-menu-item data-style-direction="vertical" role="listitem" status="visible">
        <mock:shadow-root>
          <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--vertical mg-c-menu-item__navigation-button--visible">
            <slot name="image"></slot>
            <div class="mg-c-menu-item__navigation-button-center">
              <div class="mg-c-menu-item__navigation-button-text-content">
                <slot name="label"></slot>
                <slot name="information"></slot>
              </div>
            </div>
          </button>
          <div class="mg-c-menu-item__collapse-container" hidden="">
            <slot></slot>
          </div>
        </mock:shadow-root>
        <span slot="label" title="bane: the dark knight rise">
          bane: the dark knight rise
        </span>
      </mg-menu-item>
    </mg-menu>
  </mg-menu-item>
  <mg-menu-item data-style-direction="horizontal" role="listitem" status="visible">
    <mock:shadow-root>
      <mg-popover>
        <mock:shadow-root>
          <slot></slot>
          <slot name="content"></slot>
        </mock:shadow-root>
        <button aria-controls="mg-popover-test_5" aria-expanded="false" class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--horizontal mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible">
          <slot name="image"></slot>
          <div class="mg-c-menu-item__navigation-button-center">
            <div class="mg-c-menu-item__navigation-button-text-content">
              <slot name="label"></slot>
              <slot name="information"></slot>
            </div>
          </div>
          <span class="mg-c-menu-item__navigation-button-chevron">
            <mg-icon icon="chevron-down" size="small"></mg-icon>
          </span>
        </button>
        <mg-popover-content data-arrow-hide data-popper-placement="bottom-start" data-popper-reference-hidden id="mg-popover-test_5" slot="content" style="position: fixed; left: 0; top: 0; margin: 0; right: auto; bottom: auto; transform: translate(0px, 0px);">
          <mock:shadow-root>
            <mg-card class="mg-c-popover-content">
              <div class="mg-c-popover-content__title">
                <slot name="title"></slot>
              </div>
              <slot name="content"></slot>
            </mg-card>
            <slot name="arrow"></slot>
          </mock:shadow-root>
          <div data-popper-arrow slot="arrow" style="position: absolute;"></div>
          <div class="mg-c-menu-item__collapse-container mg-c-menu-item__collapse-container--first-level" slot="content">
            <slot></slot>
          </div>
        </mg-popover-content>
      </mg-popover>
    </mock:shadow-root>
    <span slot="label" title="joker">
      joker
    </span>
    <div data-mg-popover-guard="identifier-2-popover">
      <h2>
        This is a joker card
      </h2>
      <p>
        If you don't know the joker, you can watch the movie.
      </p>
    </div>
  </mg-menu-item>
  <mg-menu-item data-style-direction="horizontal" role="listitem" status="visible">
    <mock:shadow-root>
      <a class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--horizontal mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible" href="#bane">
        <slot name="image"></slot>
        <div class="mg-c-menu-item__navigation-button-center">
          <div class="mg-c-menu-item__navigation-button-text-content">
            <slot name="label"></slot>
            <slot name="information"></slot>
          </div>
        </div>
      </a>
      <div class="mg-c-menu-item__collapse-container mg-c-menu-item__collapse-container--first-level" hidden="">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <span slot="label" title="bane">
      bane
    </span>
  </mg-menu-item>
  <mg-item-more></mg-item-more>
</mg-menu>
`;

exports[`mg-menu render with args { label: 'batman menu', direction: 'horizontal' } 1`] = `
<mg-menu aria-label="batman menu" direction="horizontal" role="list">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <mg-menu-item data-style-direction="horizontal" role="listitem" status="visible">
    <mock:shadow-root>
      <mg-popover>
        <mock:shadow-root>
          <slot></slot>
          <slot name="content"></slot>
        </mock:shadow-root>
        <button aria-controls="mg-popover-test_0" aria-expanded="false" class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--horizontal mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible">
          <slot name="image"></slot>
          <div class="mg-c-menu-item__navigation-button-center">
            <div class="mg-c-menu-item__navigation-button-text-content">
              <slot name="label"></slot>
              <slot name="information"></slot>
            </div>
          </div>
          <span class="mg-c-menu-item__navigation-button-chevron">
            <mg-icon icon="chevron-down" size="small"></mg-icon>
          </span>
        </button>
        <mg-popover-content data-arrow-hide data-popper-placement="bottom-start" data-popper-reference-hidden id="mg-popover-test_0" slot="content" style="position: fixed; left: 0; top: 0; margin: 0; right: auto; bottom: auto; transform: translate(0px, 0px);">
          <mock:shadow-root>
            <mg-card class="mg-c-popover-content">
              <div class="mg-c-popover-content__title">
                <slot name="title"></slot>
              </div>
              <slot name="content"></slot>
            </mg-card>
            <slot name="arrow"></slot>
          </mock:shadow-root>
          <div data-popper-arrow slot="arrow" style="position: absolute;"></div>
          <div class="mg-c-menu-item__collapse-container mg-c-menu-item__collapse-container--first-level" slot="content">
            <slot></slot>
          </div>
        </mg-popover-content>
      </mg-popover>
    </mock:shadow-root>
    <span slot="label" title="batman">
      batman
    </span>
    <mg-menu aria-label="batman - submenu" direction="vertical" role="list">
      <mock:shadow-root>
        <slot></slot>
      </mock:shadow-root>
      <mg-menu-item data-style-direction="vertical" role="listitem" status="visible">
        <mock:shadow-root>
          <button aria-expanded="false" class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--vertical mg-c-menu-item__navigation-button--visible">
            <slot name="image"></slot>
            <div class="mg-c-menu-item__navigation-button-center">
              <div class="mg-c-menu-item__navigation-button-text-content">
                <slot name="label"></slot>
                <slot name="information"></slot>
              </div>
            </div>
            <span class="mg-c-menu-item__navigation-button-chevron">
              <mg-icon icon="chevron-down" size="small"></mg-icon>
            </span>
          </button>
          <div class="mg-c-menu-item__collapse-container" hidden="">
            <slot></slot>
          </div>
        </mock:shadow-root>
        <span slot="label" title="batman begins">
          batman begins
        </span>
        <mg-menu aria-label="batman begins - submenu" direction="vertical" role="list">
          <mock:shadow-root>
            <slot></slot>
          </mock:shadow-root>
          <mg-menu-item data-level="2" data-style-direction="vertical" role="listitem" status="visible">
            <mock:shadow-root>
              <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--vertical mg-c-menu-item__navigation-button--visible">
                <slot name="image"></slot>
                <div class="mg-c-menu-item__navigation-button-center">
                  <div class="mg-c-menu-item__navigation-button-text-content">
                    <slot name="label"></slot>
                    <slot name="information"></slot>
                  </div>
                </div>
              </button>
              <div class="mg-c-menu-item__collapse-container" hidden="">
                <slot></slot>
              </div>
            </mock:shadow-root>
            <span slot="label" title="movie">
              movie
            </span>
          </mg-menu-item>
        </mg-menu>
      </mg-menu-item>
      <mg-menu-item data-style-direction="vertical" role="listitem" status="visible">
        <mock:shadow-root>
          <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--vertical mg-c-menu-item__navigation-button--visible">
            <slot name="image"></slot>
            <div class="mg-c-menu-item__navigation-button-center">
              <div class="mg-c-menu-item__navigation-button-text-content">
                <slot name="label"></slot>
                <slot name="information"></slot>
              </div>
            </div>
          </button>
          <div class="mg-c-menu-item__collapse-container" hidden="">
            <slot></slot>
          </div>
        </mock:shadow-root>
        <span slot="label" title="joker: the dark knight">
          joker: the dark knight
        </span>
      </mg-menu-item>
      <mg-menu-item data-style-direction="vertical" role="listitem" status="visible">
        <mock:shadow-root>
          <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--vertical mg-c-menu-item__navigation-button--visible">
            <slot name="image"></slot>
            <div class="mg-c-menu-item__navigation-button-center">
              <div class="mg-c-menu-item__navigation-button-text-content">
                <slot name="label"></slot>
                <slot name="information"></slot>
              </div>
            </div>
          </button>
          <div class="mg-c-menu-item__collapse-container" hidden="">
            <slot></slot>
          </div>
        </mock:shadow-root>
        <span slot="label" title="bane: the dark knight rise">
          bane: the dark knight rise
        </span>
      </mg-menu-item>
    </mg-menu>
  </mg-menu-item>
  <mg-menu-item data-style-direction="horizontal" role="listitem" status="visible">
    <mock:shadow-root>
      <mg-popover>
        <mock:shadow-root>
          <slot></slot>
          <slot name="content"></slot>
        </mock:shadow-root>
        <button aria-controls="mg-popover-test_5" aria-expanded="false" class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--horizontal mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible">
          <slot name="image"></slot>
          <div class="mg-c-menu-item__navigation-button-center">
            <div class="mg-c-menu-item__navigation-button-text-content">
              <slot name="label"></slot>
              <slot name="information"></slot>
            </div>
          </div>
          <span class="mg-c-menu-item__navigation-button-chevron">
            <mg-icon icon="chevron-down" size="small"></mg-icon>
          </span>
        </button>
        <mg-popover-content data-arrow-hide data-popper-placement="bottom-start" data-popper-reference-hidden id="mg-popover-test_5" slot="content" style="position: fixed; left: 0; top: 0; margin: 0; right: auto; bottom: auto; transform: translate(0px, 0px);">
          <mock:shadow-root>
            <mg-card class="mg-c-popover-content">
              <div class="mg-c-popover-content__title">
                <slot name="title"></slot>
              </div>
              <slot name="content"></slot>
            </mg-card>
            <slot name="arrow"></slot>
          </mock:shadow-root>
          <div data-popper-arrow slot="arrow" style="position: absolute;"></div>
          <div class="mg-c-menu-item__collapse-container mg-c-menu-item__collapse-container--first-level" slot="content">
            <slot></slot>
          </div>
        </mg-popover-content>
      </mg-popover>
    </mock:shadow-root>
    <span slot="label" title="joker">
      joker
    </span>
    <div data-mg-popover-guard="identifier-2-popover">
      <h2>
        This is a joker card
      </h2>
      <p>
        If you don't know the joker, you can watch the movie.
      </p>
    </div>
  </mg-menu-item>
  <mg-menu-item data-style-direction="horizontal" role="listitem" status="visible">
    <mock:shadow-root>
      <a class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--horizontal mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--visible" href="#bane">
        <slot name="image"></slot>
        <div class="mg-c-menu-item__navigation-button-center">
          <div class="mg-c-menu-item__navigation-button-text-content">
            <slot name="label"></slot>
            <slot name="information"></slot>
          </div>
        </div>
      </a>
      <div class="mg-c-menu-item__collapse-container mg-c-menu-item__collapse-container--first-level" hidden="">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <span slot="label" title="bane">
      bane
    </span>
  </mg-menu-item>
  <mg-item-more></mg-item-more>
</mg-menu>
`;

exports[`mg-menu render with args { label: 'batman menu', direction: 'vertical' } 1`] = `
<mg-menu aria-label="batman menu" direction="vertical" role="list">
  <mock:shadow-root>
    <slot></slot>
  </mock:shadow-root>
  <mg-menu-item data-style-direction="vertical" role="listitem" status="visible">
    <mock:shadow-root>
      <button aria-expanded="false" class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--vertical mg-c-menu-item__navigation-button--visible">
        <slot name="image"></slot>
        <div class="mg-c-menu-item__navigation-button-center">
          <div class="mg-c-menu-item__navigation-button-text-content">
            <slot name="label"></slot>
            <slot name="information"></slot>
          </div>
        </div>
        <span class="mg-c-menu-item__navigation-button-chevron">
          <mg-icon icon="chevron-down" size="small"></mg-icon>
        </span>
      </button>
      <div class="mg-c-menu-item__collapse-container" hidden="">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <span slot="label" title="batman">
      batman
    </span>
    <mg-menu aria-label="batman - submenu" direction="vertical" role="list">
      <mock:shadow-root>
        <slot></slot>
      </mock:shadow-root>
      <mg-menu-item data-level="2" data-style-direction="vertical" role="listitem" status="visible">
        <mock:shadow-root>
          <button aria-expanded="false" class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--vertical mg-c-menu-item__navigation-button--visible">
            <slot name="image"></slot>
            <div class="mg-c-menu-item__navigation-button-center">
              <div class="mg-c-menu-item__navigation-button-text-content">
                <slot name="label"></slot>
                <slot name="information"></slot>
              </div>
            </div>
            <span class="mg-c-menu-item__navigation-button-chevron">
              <mg-icon icon="chevron-down" size="small"></mg-icon>
            </span>
          </button>
          <div class="mg-c-menu-item__collapse-container" hidden="">
            <slot></slot>
          </div>
        </mock:shadow-root>
        <span slot="label" title="batman begins">
          batman begins
        </span>
        <mg-menu aria-label="batman begins - submenu" direction="vertical" role="list">
          <mock:shadow-root>
            <slot></slot>
          </mock:shadow-root>
          <mg-menu-item data-level="3" data-style-direction="vertical" role="listitem" status="visible">
            <mock:shadow-root>
              <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--vertical mg-c-menu-item__navigation-button--visible">
                <slot name="image"></slot>
                <div class="mg-c-menu-item__navigation-button-center">
                  <div class="mg-c-menu-item__navigation-button-text-content">
                    <slot name="label"></slot>
                    <slot name="information"></slot>
                  </div>
                </div>
              </button>
              <div class="mg-c-menu-item__collapse-container" hidden="">
                <slot></slot>
              </div>
            </mock:shadow-root>
            <span slot="label" title="movie">
              movie
            </span>
          </mg-menu-item>
        </mg-menu>
      </mg-menu-item>
      <mg-menu-item data-level="2" data-style-direction="vertical" role="listitem" status="visible">
        <mock:shadow-root>
          <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--vertical mg-c-menu-item__navigation-button--visible">
            <slot name="image"></slot>
            <div class="mg-c-menu-item__navigation-button-center">
              <div class="mg-c-menu-item__navigation-button-text-content">
                <slot name="label"></slot>
                <slot name="information"></slot>
              </div>
            </div>
          </button>
          <div class="mg-c-menu-item__collapse-container" hidden="">
            <slot></slot>
          </div>
        </mock:shadow-root>
        <span slot="label" title="joker: the dark knight">
          joker: the dark knight
        </span>
      </mg-menu-item>
      <mg-menu-item data-level="2" data-style-direction="vertical" role="listitem" status="visible">
        <mock:shadow-root>
          <button class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--vertical mg-c-menu-item__navigation-button--visible">
            <slot name="image"></slot>
            <div class="mg-c-menu-item__navigation-button-center">
              <div class="mg-c-menu-item__navigation-button-text-content">
                <slot name="label"></slot>
                <slot name="information"></slot>
              </div>
            </div>
          </button>
          <div class="mg-c-menu-item__collapse-container" hidden="">
            <slot></slot>
          </div>
        </mock:shadow-root>
        <span slot="label" title="bane: the dark knight rise">
          bane: the dark knight rise
        </span>
      </mg-menu-item>
    </mg-menu>
  </mg-menu-item>
  <mg-menu-item data-style-direction="vertical" role="listitem" status="visible">
    <mock:shadow-root>
      <button aria-expanded="false" class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--vertical mg-c-menu-item__navigation-button--visible">
        <slot name="image"></slot>
        <div class="mg-c-menu-item__navigation-button-center">
          <div class="mg-c-menu-item__navigation-button-text-content">
            <slot name="label"></slot>
            <slot name="information"></slot>
          </div>
        </div>
        <span class="mg-c-menu-item__navigation-button-chevron">
          <mg-icon icon="chevron-down" size="small"></mg-icon>
        </span>
      </button>
      <div class="mg-c-menu-item__collapse-container" hidden="">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <span slot="label" title="joker">
      joker
    </span>
    <div>
      <h2>
        This is a joker card
      </h2>
      <p>
        If you don't know the joker, you can watch the movie.
      </p>
    </div>
  </mg-menu-item>
  <mg-menu-item data-style-direction="vertical" role="listitem" status="visible">
    <mock:shadow-root>
      <a class="mg-c-menu-item__navigation-button mg-c-menu-item__navigation-button--size-regular mg-c-menu-item__navigation-button--vertical mg-c-menu-item__navigation-button--visible" href="#bane">
        <slot name="image"></slot>
        <div class="mg-c-menu-item__navigation-button-center">
          <div class="mg-c-menu-item__navigation-button-text-content">
            <slot name="label"></slot>
            <slot name="information"></slot>
          </div>
        </div>
      </a>
      <div class="mg-c-menu-item__collapse-container" hidden="">
        <slot></slot>
      </div>
    </mock:shadow-root>
    <span slot="label" title="bane">
      bane
    </span>
  </mg-menu-item>
</mg-menu>
`;
